fix: textures position on mobile devices

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -5,5 +5,5 @@
 
 @font-face {
   font-family: 'DelaGothicOne';
-  src: url(../public/font/DelaGothicOne-Regular.ttf);
+  src: url(./font/DelaGothicOne-Regular.ttf);
 }
